[gd_scene load_steps=9 format=3 uid="uid://dos6hbxcvimy4"]

[ext_resource type="Script" uid="uid://hnw0kk7w6a6o" path="res://characters/character.gd" id="1_54qew"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xfap"]
size = Vector2(46, 50)

[sub_resource type="Animation" id="Animation_mdkfl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_54qew"]
resource_name = "down"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_qqr4u"]
resource_name = "left"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_3fwhk"]
resource_name = "right"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_3xfap"]
resource_name = "up"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mdkfl"]
_data = {
&"RESET": SubResource("Animation_mdkfl"),
&"down": SubResource("Animation_54qew"),
&"left": SubResource("Animation_qqr4u"),
&"right": SubResource("Animation_3fwhk"),
&"up": SubResource("Animation_3xfap")
}

[node name="Character" type="Area2D"]
script = ExtResource("1_54qew")
speed = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3xfap")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mdkfl")
}

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(64, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(-64, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(0, 64)

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(0, -64)
